@@ -308,6 +308,8 @@ const char *RFX_Type_SubType_Desc(const unsigned char dType, const unsigned char
 		{ pTypeTEMP_HUM, sTypeTH8, "WT450H" },
 		{ pTypeTEMP_HUM, sTypeTH9, "Viking 02035, 02038" },
 		{ pTypeTEMP_HUM, sTypeTH10, "Rubicson/IW008T/TX95" },
+		{ pTypeTEMP_HUM, sTypeTH_LC_TC, "LaCrosse TX3" },
+		
 
 		{ pTypeTEMP_HUM_BARO, sTypeTHB1, "THB1 - BTHR918" },
 		{ pTypeTEMP_HUM_BARO, sTypeTHB2, "THB2 - BTHR918N, BTHR968" },
